# research-gym

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
docs/: design.md  roadmap.md
rgym/: __init__.py  cli.py  lesson.py  registry.py  report.py  runner.py  workspace.py
tests/: test_cli_smoke.py  test_lesson_solutions.py  test_project_docs.py  test_registry.py  test_report.py  test_runner.py  test_workspace.py
tracks/llm/01_bigram_lm/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/llm/01_bigram_lm/scripts/: run_demo.py
tracks/llm/01_bigram_lm/tests/: test_bigram.py  test_placeholder.py
tracks/llm/02_tokenizer/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/llm/02_tokenizer/scripts/: run_demo.py
tracks/llm/02_tokenizer/tests/: test_tokenizer.py
tracks/llm/03_causal_attention/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/llm/03_causal_attention/scripts/: run_demo.py
tracks/llm/04_transformer_block/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/world_models/01_vae/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/world_models/02_latent_dynamics/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
tracks/world_models/03_mdn_rnn/: README.md  concept.md  guide.md  hints.md  lesson.yaml  review.md  scaffold.py  solution.py
(+9 files in other folders)
